tests/snapshots/assets__check_file@array.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/array.typ
---
#{
  (1,)
  (1, 2, 3)
}
