tests/snapshots/assets__check_file@attach.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/attach.typ
---
$ a_b^c $
$ a_b^c $
$ a_b''^c $
$ a_b^c'' $
$ a''_b^c $
$ a''_b^(c+d) $
$ a''_b^((c+d)) $
$ a''_(e^f)^(c+d) $
