tests/snapshots/assets__check_file@binary.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/op/binary.typ
---
#{
  panic("Unsupported content type " + type(content) + "! " + "Provide your own `draw-node` implementation.")
}
