tests/snapshots/assets__check_file@block-comment.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/block-comment.typ
---
#if draw-edge == auto {
  draw-edge = (source-name, target-name, target-node) => {
    let (a, b) = (source-name + "." + direction, target-name + "." + opposite-dir.at(direction))
    
    draw.line(a, b)
  }
}
