tests/snapshots/assets__check_file@block-comment.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/block-comment.typ
---
Our study design is as follows:
/* Somebody write this up:
   - 1000 participants.
   - 2x2 data design. */

#if draw-edge == auto {
  draw-edge = (source-name, target-name, target-node) => {
    let (a, b) = (
      source-name + "." + direction,
      target-name + "." + opposite-dir.at(direction),
    )
    /* see this */
    draw.line(a, b)
    /*
    if direction == "bottom" {
    draw.line(a, (rel: (0, -grow/3)), ((), "-|", b), b)
    } else if direction == "up" {
    draw.line(a, (rel: (0, grow/3)), ((), "-|", b), b)
    } else if direction == "left" {
    draw.line(a, (rel: (-grow/3, 0)), ((), "|-", b), b)
    } else if direction == "right" {
    draw.line(a, (rel: (grow/3, 0)), ((), "|-", b), b)
    }
    */
  }
}
